package be.kdg.youthcouncil.domain.media;

import javax.persistence.Entity;

public enum MediaType {
	VIDEO,
	IMAGE
}
